# ddt-piano

./: README.md  package-lock.json  package.json  svelte.config.js  testtest.mid
.github/workflows/: build-windows.yaml  deploy-github-pages.yaml
scripts/: release.cjs  sync-version.cjs  tag-version.cjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arrange.rs  main.rs
src/lib/: constants.ts  interface.ts  yaml.ts
src/lib/components/landing/: Button.svelte  ContactSection.svelte  Footer.svelte  HeroSection.svelte  InstallGuide.svelte  StepCard.svelte  UsageGuide.svelte
src/lib/components/screen/: tauri.svelte  web.svelte
src/routes/: +layout.svelte  +page.svelte
static/: robots.txt  sitemap.xml
web-player/: README.md  package-lock.json  package.json
web-player/src/routes/: +page.svelte
