[package]
name = "ddt-piano"
version = "1.0.11"
description = "두두타피아노"
authors = ["d3fau1t"]
license = "MIT"
repository = "https://github.com/aciddust/ddt-piano"
homepage = "https://github.com/aciddust/ddt-piano"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.5"
sysinfo = "0.30"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
midly = "0.5"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[build]
target = "x86_64-pc-windows-gnu"
